Update services and CV

--- a/services.html
+++ b/services.html
@@ -94,10 +94,12 @@
                     <div class="card-body">
                         <h4 class="card-title">Organizing Committee Member of SE events</h4>
                         <p class="card-text text-justify small">
+                            <a href="https://conf.researchr.org/home/icpc-2021" target="blank">29th International
+                                Conference on Program Comprehension</a>: Tool Demo Co-Chair<br />
                             <a href="https://soheal.github.io/" target="blank">3rd International Workshop on Software
                                 Health</a>: Organizer<br />
                             <a href="https://conf.researchr.org/home/icpc-2020" target="blank">28th International
-                                Conference on Program Comprehension</a>: Publicity Chair<br />
+                                Conference on Program Comprehension</a>: Publicity Co-Chair<br />
                             <a href="https://2020.programming-conference.org/home/eniac-2020" target="blank">1st
                                 International Workshop on ENgineering Intelligent Applications' Code</a>: Program
                             Chair<br />
@@ -117,6 +119,9 @@
                     <div class="card-body">
                         <h4 class="card-title">Editorial Board Member of International Journals</h4>
                         <p class="card-text text-justify small">
+                            IEEE Software - Initiatives Team: 2020 - Actual
+                        </p>
+                        <p class="card-text text-justify small">
                             IEEE Software Blog: 2019 - Actual
                         </p>
                     </div>
@@ -126,15 +131,21 @@
                     <div class="card-body">
                         <h4 class="card-title">Program Committee Member of International Conferences and Workshops</h4>
                         <p class="card-text text-justify small">
-                            Euromicro Conference on Software Engineering and Advanced Applications (SEAA) - Journal
-                            First Track: 2020<br />
-                            IEEE International Conference on Program Comprehension (ICPC) - Research Track: 2020<br />
+                            ACM Joint European Software Engineering Conference and Symposium on the Foundations of
+                            Software Engineering (ESEC/FSE) – Tool Demo Track: 2020<br />
+                            IEEE/ACM International Conference on Automated Software Engineering - Late Breaking Results
+                            Track: 2020<br />
                             IEEE International Conference on Software Analysis, Evolution, and Reengineering (SANER) –
                             Research Track: 2020<br />
                             IEEE International Conference on Software Analysis, Evolution, and Reengineering (SANER) –
                             Tool Demo Track: 2020<br />
                             IEEE International Conference on Software Analysis, Evolution, and Reengineering (SANER) –
                             Journal First Track: 2020<br />
+                            IEEE International Conference on Program Comprehension (ICPC) - Research Track: 2020<br />
+                            Euromicro Conference on Software Engineering and Advanced Applications (SEAA) - Journal
+                            First Track: 2020<br />
+                            Workshop on Machine Learning Techniques for Software Quality Evaluation (MaLTeSQuE): 2018,
+                            2019, 2020<br />
                             ACM Joint European Software Engineering Conference and Symposium on the Foundations of
                             Software Engineering (ESEC/FSE) – Artifact Evaluation Track: 2019<br />
                             IEEE International Conference on Software Maintenance and Evolution (ICSME) - Tool Demo
@@ -142,8 +153,6 @@
                             IEEE/ACM International Conference on Mobile Software Engineering and Systems (MOBILESoft) –
                             Student Research Competition: 2018, 2019<br />
                             International Workshop on Cloud-Native Applications Design and Experience (CNAX): 2018,
-                            2019<br />
-                            Workshop on Machine Learning Techniques for Software Quality Evaluation (MaLTeSQuE): 2018,
                             2019<br />
                         </p>
                     </div>
@@ -178,10 +187,10 @@
                             International Conference on Evaluation and Assessment in Software Engineering (EASE):
                             2020<br />
                             IEEE International Conference on Program Comprehension (ICPC): 2016, 2018, 2019<br />
-                            IEEE International Conference on Software Analysis, Evolution, and Reengineering (SANER):
-                            2017, 2018<br />
+                            IEEE International Conference on Software Analysis, Evolution, and Reengineering
+                            (SANER):2017, 2018<br />
                             IEEE International Conference on Software Maintenance and Evolution (ICSME): 2016 (ERA
-                            Track), 2018<br />
+                            Track), 2018, 2020<br />
                             International Conference on Business Information Systems (BIS): 2015, 2016, 2017<br />
                             International Conference on Distributed Multimedia Systems (DMS): 2015, 2016<br />
                             International Conference on Enterprise Information Systems (ICEIS): 2015, 2016, 2017
@@ -193,8 +202,13 @@
                     <div class="card-body">
                         <h4 class="card-title">Invited Talks</h4>
                         <p class="card-text text-justify small">
-                            Mining Source Code^3: Mining Idioms, Usages and Edits.
-                            FOSDEM, Brussels, Belgium, February 3rd 2019<br />
+                            Improving Energy Efficiency of Mobile Applications in the Internet of Things. International
+                            Summer School on Internet of Things. University of Salerno, Fisciano, Italy, 3rd June
+                            2020<br />
+                            Defect Prediction: using Machine Learning for focusing the Testing Effort. University of
+                            Salerno, Fisciano, Italy, 25th March 2020<br />
+                            Mining Source Code^3: Mining Idioms, Usages and Edits. FOSDEM, Brussels, Belgium, February
+                            3rd 2019<br />
                             Defect Prediction: using Machine Learning for focusing the Testing Effort. Jheronimus
                             Academy of Data Science, 's-Hertogenbosch, The Netherlands, March 9th 2018<br />
                             Defect Prediction: using Machine Learning for focusing the Testing Effort. Jheronimus
