--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <p class="mb-5 text-justify">I am an assistant professor at the <a href="https://www.jads.nl/"
-                                target="_blank">Jheronimus Academy of Data Science</a>, a joint collaboration between
+                                target="_blank">Jheronimus Academy of Data Science</a>, a collaboration between
                             Tilburg University and Eindhoven Technical University.
                             From 2018 to 2019 I have been a postdoctoral fellow at the <a
                                 href="http://soft.vub.ac.be/soft/" target="_blank">Software Languages Lab</a> of the <a
