--- a/services.html
+++ b/services.html
@@ -132,26 +132,16 @@
                         <h4 class="card-title">Program Committee Member of International Conferences and Workshops</h4>
                         <p class="card-text text-justify small">
                             ACM Joint European Software Engineering Conference and Symposium on the Foundations of
-                            Software Engineering (ESEC/FSE) – Tool Demo Track: 2020<br />
-                            IEEE/ACM International Conference on Automated Software Engineering - Late Breaking Results
-                            Track: 2020<br />
-                            IEEE International Conference on Software Analysis, Evolution, and Reengineering (SANER) –
-                            Research Track: 2020<br />
-                            IEEE International Conference on Software Analysis, Evolution, and Reengineering (SANER) –
-                            Tool Demo Track: 2020<br />
-                            IEEE International Conference on Software Analysis, Evolution, and Reengineering (SANER) –
-                            Journal First Track: 2020<br />
-                            IEEE International Conference on Program Comprehension (ICPC) - Research Track: 2020<br />
-                            Euromicro Conference on Software Engineering and Advanced Applications (SEAA) - Journal
-                            First Track: 2020<br />
-                            Workshop on Machine Learning Techniques for Software Quality Evaluation (MaLTeSQuE): 2018,
-                            2019, 2020<br />
-                            ACM Joint European Software Engineering Conference and Symposium on the Foundations of
-                            Software Engineering (ESEC/FSE) – Artifact Evaluation Track: 2019<br />
-                            IEEE International Conference on Software Maintenance and Evolution (ICSME) - Tool Demo
-                            Track: 2018, 2019<br />
-                            IEEE/ACM International Conference on Mobile Software Engineering and Systems (MOBILESoft) –
-                            Student Research Competition: 2018, 2019<br />
+                            Software Engineering (ESEC/FSE): 2020 (Tool Demo Track), 2019 (Artifact Evaluation Track)<br />
+                            IEEE/ACM International Conference on Automated Software Engineering: 2020 (Late Breaking Results
+                            Track)<br />
+                            IEEE International Conference on Software Analysis, Evolution, and Reengineering (SANER): 2020 (Research Track, Tool Demo Track, Journal First Track)<br />
+                            IEEE International Conference on Program Comprehension (ICPC): 2020 (Research Track)<br />
+                            Euromicro Conference on Software Engineering and Advanced Applications (SEAA): 2020 (Journal
+                            First Track)<br />
+                            Workshop on Machine Learning Techniques for Software Quality Evaluation (MaLTeSQuE): 2020, 2019, 2018<br />
+                            IEEE International Conference on Software Maintenance and Evolution (ICSME): 2019 (Tool Demo Track), 2018 (Tool Demo Track)<br />
+                            IEEE/ACM International Conference on Mobile Software Engineering and Systems (MOBILESoft): 2018 (Student Research Competition), 2019 (Student Research Competition)<br />
                             International Workshop on Cloud-Native Applications Design and Experience (CNAX): 2018,
                             2019<br />
                         </p>
@@ -184,16 +174,15 @@
                     <div class="card-body">
                         <h4 class="card-title">Reviewer for International Conferences and Workshops</h4>
                         <p class="card-text text-justify small">
+                            IEEE International Conference on Software Maintenance and Evolution (ICSME): 2020 (Research Track), 2018 (Research Track), 2016 (ERA Track)<br />
                             International Conference on Evaluation and Assessment in Software Engineering (EASE):
                             2020<br />
-                            IEEE International Conference on Program Comprehension (ICPC): 2016, 2018, 2019<br />
+                            IEEE International Conference on Program Comprehension (ICPC): 2019, 2018, 2016<br />
                             IEEE International Conference on Software Analysis, Evolution, and Reengineering
-                            (SANER):2017, 2018<br />
-                            IEEE International Conference on Software Maintenance and Evolution (ICSME): 2016 (ERA
-                            Track), 2018, 2020<br />
-                            International Conference on Business Information Systems (BIS): 2015, 2016, 2017<br />
-                            International Conference on Distributed Multimedia Systems (DMS): 2015, 2016<br />
-                            International Conference on Enterprise Information Systems (ICEIS): 2015, 2016, 2017
+                            (SANER): 2018, 2017<br />
+                            International Conference on Business Information Systems (BIS): 2017, 2016, 2015<br />
+                            International Conference on Distributed Multimedia Systems (DMS): 2016, 2015<br />
+                            International Conference on Enterprise Information Systems (ICEIS): 2017, 2016, 2015
                         </p>
                     </div>
                 </div>
