--- a/services.html
+++ b/services.html
@@ -131,11 +131,11 @@
                     <div class="card-body">
                         <h4 class="card-title">Program Committee Member of International Conferences and Workshops</h4>
                         <p class="card-text text-justify small">
+                            IEEE International Conference on Software Analysis, Evolution, and Reengineering (SANER): 2021 (Reproducibility Studies and Negative Results Track), 2020 (Research Track, Tool Demo Track, Journal First Track)<br />
                             ACM Joint European Software Engineering Conference and Symposium on the Foundations of
                             Software Engineering (ESEC/FSE): 2020 (Tool Demo Track), 2019 (Artifact Evaluation Track)<br />
                             IEEE/ACM International Conference on Automated Software Engineering: 2020 (Late Breaking Results
                             Track)<br />
-                            IEEE International Conference on Software Analysis, Evolution, and Reengineering (SANER): 2020 (Research Track, Tool Demo Track, Journal First Track)<br />
                             IEEE International Conference on Program Comprehension (ICPC): 2020 (Research Track)<br />
                             Euromicro Conference on Software Engineering and Advanced Applications (SEAA): 2020 (Journal
                             First Track)<br />
