--- a/services.html
+++ b/services.html
@@ -119,9 +119,7 @@
                     <div class="card-body">
                         <h4 class="card-title">Editorial Board Member of International Journals</h4>
                         <p class="card-text text-justify small">
-                            IEEE Software - Initiatives Team: 2020 - Actual
-                        </p>
-                        <p class="card-text text-justify small">
+                            IEEE Software - Initiatives Team: 2020 - Actual<br />
                             IEEE Software Blog: 2019 - Actual
                         </p>
                     </div>
@@ -131,19 +129,29 @@
                     <div class="card-body">
                         <h4 class="card-title">Program Committee Member of International Conferences and Workshops</h4>
                         <p class="card-text text-justify small">
-                            IEEE International Conference on Software Analysis, Evolution, and Reengineering (SANER): 2021 (Reproducibility Studies and Negative Results Track), 2020 (Research Track, Tool Demo Track, Journal First Track)<br />
+                            IEEE International Conference on Software Analysis, Evolution, and Reengineering (SANER):<br />
+                            &emsp;2021 (Reproducibility Studies and Negative Results Track)<br />
+                            &emsp;2020 (Research Track, Tool Demo Track, Journal First Track)<br />
+                            IEEE International Working Conference on Source Code Analysis and Manipulation (SCAM): <br />
+                            &emsp;2020 (New Ideas and Emerging Results Track)<br />
                             ACM Joint European Software Engineering Conference and Symposium on the Foundations of
-                            Software Engineering (ESEC/FSE): 2020 (Tool Demo Track), 2019 (Artifact Evaluation Track)<br />
-                            IEEE/ACM International Conference on Automated Software Engineering: 2020 (Late Breaking Results
-                            Track)<br />
-                            IEEE International Conference on Program Comprehension (ICPC): 2020 (Research Track)<br />
-                            Euromicro Conference on Software Engineering and Advanced Applications (SEAA): 2020 (Journal
-                            First Track)<br />
-                            Workshop on Machine Learning Techniques for Software Quality Evaluation (MaLTeSQuE): 2020, 2019, 2018<br />
-                            IEEE International Conference on Software Maintenance and Evolution (ICSME): 2019 (Tool Demo Track), 2018 (Tool Demo Track)<br />
-                            IEEE/ACM International Conference on Mobile Software Engineering and Systems (MOBILESoft): 2019 (Student Research Competition), 2018 (Student Research Competition)<br />
-                            International Workshop on Cloud-Native Applications Design and Experience (CNAX): 2019,
-                            2018<br />
+                            Software Engineering (ESEC/FSE):<br />
+                            &emsp;2020 (Tool Demo Track)<br />
+                            &emsp;2019 (Artifact Evaluation Track)<br />
+                            IEEE/ACM International Conference on Automated Software Engineering (ASE):<br />
+                            &emsp;2020 (Late Breaking Results Track)<br />
+                            IEEE International Conference on Program Comprehension (ICPC):<br />
+                            &emsp;2020 (Research Track)<br />
+                            Euromicro Conference on Software Engineering and Advanced Applications (SEAA):<br />
+                            &emsp;2020 (Journal First Track)<br />
+                            IEEE International Conference on Software Maintenance and Evolution (ICSME):<br />
+                            &emsp;2019 (Tool Demo Track)<br />
+                            &emsp;2018 (Tool Demo Track)<br />
+                            IEEE/ACM International Conference on Mobile Software Engineering and Systems (MOBILESoft):<br />
+                            &emsp;2019 (Student Research Competition)<br />
+                            &emsp;2018 (Student Research Competition)<br />
+                            Workshop on Machine Learning Techniques for Software Quality Evaluation (MaLTeSQuE): 2020 2019 2018<br />
+                            International Workshop on Cloud-Native Applications Design and Experience (CNAX): 2019 2018<br />
                         </p>
                     </div>
                 </div>
@@ -174,7 +182,8 @@
                     <div class="card-body">
                         <h4 class="card-title">Reviewer for International Conferences and Workshops</h4>
                         <p class="card-text text-justify small">
-                            IEEE International Conference on Software Maintenance and Evolution (ICSME): 2020 (Research Track), 2018 (Research Track), 2016 (ERA Track)<br />
+                            IEEE International Conference on Software Maintenance and Evolution (ICSME): 2020 (Research
+                            Track), 2018 (Research Track), 2016 (ERA Track)<br />
                             International Conference on Evaluation and Assessment in Software Engineering (EASE):
                             2020<br />
                             IEEE International Conference on Program Comprehension (ICPC): 2019, 2018, 2016<br />
