--- a/services.html
+++ b/services.html
@@ -201,10 +201,9 @@
                         <h4 class="card-title">Invited Talks</h4>
                         <p class="card-text text-justify small">
                             Improving Energy Efficiency of Mobile Applications in the Internet of Things. International
-                            Summer School on Internet of Things. University of Salerno, Fisciano, Italy, 3rd June
-                            2020<br />
+                            Summer School on Internet of Things, University of Salerno, Fisciano, Italy, June 3rd 2020<br />
                             Defect Prediction: using Machine Learning for focusing the Testing Effort. University of
-                            Salerno, Fisciano, Italy, 25th March 2020<br />
+                            Salerno, Fisciano, Italy, March 25th 2020<br />
                             Mining Source Code^3: Mining Idioms, Usages and Edits. FOSDEM, Brussels, Belgium, February
                             3rd 2019<br />
                             Defect Prediction: using Machine Learning for focusing the Testing Effort. Jheronimus
