--- a/services.html
+++ b/services.html
@@ -130,8 +130,8 @@
                         <h4 class="card-title">Program Committee Member of International Conferences and Workshops</h4>
                         <p class="card-text text-justify small">
                             IEEE International Conference on Software Analysis, Evolution, and Reengineering (SANER):<br />
-                            &emsp;2021 (Research Track, Reproducibility Studies and Negative Results Track)<br />
-                            &emsp;2020 (Research Track, Tool Demo Track, Journal First Track)<br />
+                            &emsp;2021 (Research Track, Reproducibility Studies and Negative Results Track, Tool Demo Track)<br />
+                            &emsp;2020 (Research Track, Journal First Track, Tool Demo Track)<br />
                             IEEE International Working Conference on Source Code Analysis and Manipulation (SCAM): <br />
                             &emsp;2020 (New Ideas and Emerging Results Track)<br />
                             ACM Joint European Software Engineering Conference and Symposium on the Foundations of
