Update teaching activities

--- a/teaching.html
+++ b/teaching.html
@@ -106,10 +106,26 @@
                                 <tr>
                                     <td>Introduction to Machine Learning</td>
                                     <td>Pre-MSc</td>
-                                    <td>Tilburg University, Technical University Eindhoven</td>
-                                    <td>Spring 2020 (co-lectured with <a
+                                    <td>Jheronimus Academy of Data Science, Tilburg University, Technical University Eindhoven</td>
+                                    <td>Spring 2021 (co-lectured with <a
+                                            href="https://scholar.google.com/citations?user=l7BGAq8AAAAJ&hl=en"
+                                            target="blank"> Prof. D.A. Tamburri</a>)<br/>Spring 2020 (co-lectured with <a
                                             href="https://scholar.google.com/citations?user=l7BGAq8AAAAJ&hl=en"
                                             target="blank"> Prof. D.A. Tamburri</a>)</td>
+                                </tr>
+                                <tr>
+                                    <td>Data Engineerng</td>
+                                    <td>MSc</td>
+                                    <td>Jheronimus Academy of Data Science, Tilburg University, Technical University Eindhoven</td>
+                                    <td>Spring 2020 (co-lectured with <a
+                                            href="https://scholar.google.com/citations?user=l7BGAq8AAAAJ&hl=en"
+                                            target="blank"> Prof. D.A. Tamburri</a>, <a
+                                            href="https://scholar.google.it/citations?user=13xdkw4AAAAJ&hl=en"
+                                            target="blank"> Prof. W.J. van den Heuvel</a>, <a
+                                            href="https://scholar.google.it/citations?user=IfiRc9MAAAAJ&hl=en"
+                                            target="blank"> Dr. I. Kumara</a>,<a
+                                            href="https://www.linkedin.com/in/ekhtiar/"
+                                            target="blank"> E. Syed</a>)</td>
                                 </tr>
                                 <tr>
                                     <td>Data Statistics</td>
