--- a/teaching.html
+++ b/teaching.html
@@ -117,7 +117,7 @@
                                     <td>Data Engineerng</td>
                                     <td>MSc</td>
                                     <td>Jheronimus Academy of Data Science, Tilburg University, Technical University Eindhoven</td>
-                                    <td>Spring 2020 (co-lectured with <a
+                                    <td>Fall 2020 (co-lectured with <a
                                             href="https://scholar.google.com/citations?user=l7BGAq8AAAAJ&hl=en"
                                             target="blank"> Prof. D.A. Tamburri</a>, <a
                                             href="https://scholar.google.it/citations?user=13xdkw4AAAAJ&hl=en"
