--- a/index.html
+++ b/index.html
@@ -95,27 +95,30 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-12">
-                        <p class="mb-5 text-justify">I am an assistant professor at the <a href="https://www.jads.nl/"
-                                target="_blank">Jheronimus Academy of Data Science</a>, a collaboration between
-                            Tilburg University and Eindhoven Technical University.
-                            From 2018 to 2019 I have been a postdoctoral fellow at the <a
-                                href="http://soft.vub.ac.be/soft/" target="_blank">Software Languages Lab</a> of the <a
-                                href="https://www.vub.be/" target="_blank">Vrije Universiteit Brussel</a> with <a
-                                href="http://soft.vub.ac.be/~cderoove/" target="_blank">Prof. Coen De Roover</a>.
-                            In 2018 I received a PhD from the <a
-                            href="https://web.unisa.it/en/home" target="_blank">University of Salerno</a> advised by <a
-                                href="https://docenti.unisa.it/003241/en/home" target="_blank">Prof. Andrea De Lucia</a>
-                            with a thesis entitled <i>Methods and Tools for Focusing and Prioritizing the Testing
-                                Effort</i>.<br />
-                            My research is on <i>empirical software engineering</i>, in particular, <i>software
-                                maintenance and evolution</i> and <i>software testing</i>.
-                            To this aim, I apply several techniques such as <i>machine learning</i>, <i>search-based
-                                algorithms</i>, and <i>mining of software repositories</i>.<br />
-                            I serve and had served as a program committee member of various international conferences
-                            (e.g., ESEC/FSE, ICSME, SANER, ICPC), and as referee for various international journals in
+                        <p class="mb-5 text-justify">I am an assistant professor at the <a
+                                href="http://jade-lab.github.io/" target="_blank">Jheronimus Academy Data and
+                                Engineering Lab</a> of the <a href="https://www.jads.nl/" target="_blank">Jheronimus
+                                Academy of Data Science</a>, a collaboration between
+                            Tilburg University and Eindhoven Technical University.<br />
+                            From 2018 to 2019, I was a postdoctoral fellow at the <a href="http://soft.vub.ac.be/soft/"
+                                target="_blank">Software Languages Lab</a> of the <a href="https://www.vub.be/"
+                                target="_blank">Vrije Universiteit Brussel</a> with <a
+                                href="http://soft.vub.ac.be/~cderoove/" target="_blank">Prof. Coen De Roover</a>.<br />
+                            In 2018, I received a Ph.D. from the <a href="https://web.unisa.it/en/home"
+                                target="_blank">University of Salerno</a>, advised by <a
+                                href="https://docenti.unisa.it/003241/en/home" target="_blank">Prof. Andrea De
+                                Lucia</a>,
+                            with a thesis entitled <i>"Methods and Tools for Focusing and Prioritizing the Testing
+                                Effort"</i>.<br />
+                            My research is on <b>empirical software engineering</b>, particularly, <b>software
+                                maintenance and evolution</b> and <b>software testing</b>, where I apply <b>machine
+                                learning</b>, <b>search-based
+                                algorithms</b>, and <b>mining of software repositories</b>.<br />
+                            I serve and served as a program committee member of international conferences
+                            (e.g., ESEC/FSE, ICSME, SANER, ICPC), and as a referee for various international journals in
                             the field of software engineering (e.g., TSE, TOSEM, EMSE, JSS) and artificial intelligence
-                            (e.g., TKDE, Neurocomputing).
-                            <a target="_blank" href="FullCV.pdf">Full Curriculum Vitae</a></p>
+                            (e.g., TKDE, Neurocomputing).<br />
+                            You can find my full Curriculum Vitae <a target="_blank" href="FullCV.pdf">here</a>.</p>
                     </div>
                 </div>
 
