--- a/projects.html
+++ b/projects.html
@@ -148,10 +148,19 @@
 
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
+                        <h4 class="card-title">AnsibleMetrics</h4>
+                        <p class="card-text text-justify small">AnsibleMetrics is a Python-based static source code measurement tool to characterize Infrastructure-as-Code. It analyzes Ansible projects, but it could be easily extended to support additional formats. AnsibleMetrics represents a step forward towards software quality support for DevOps engineers developing and maintaining infrastructure code. It is released under the Apache 2.0 license.</p>
+                        <p class="card-text"><a href="https://github.com/radon-h2020/radon-ansible-metrics" target="_blank">Source Code</a> - <a href="https://radon-h2020.github.io/radon-ansible-metrics">Documentation</a>
+                        </p>
+                    </div>
+                </div>
+
+                <div class="card card-horizontal mb-2">
+                    <div class="card-body">
                         <h4 class="card-title">SoCRATES</h4>
                         <p class="card-text text-justify small">SoCRATES is an IntelliJ IDEA plugin to detect test
                             smells in Scala/SBT projects. It automatically detects and reports on six test smells
-                            including four variants of General Fixture. It is released under MIT license.</p>
+                            including four variants of General Fixture. It is released under the MIT license.</p>
                         <p class="card-text"><a href="https://github.com/jonas-db/socrates" target="_blank">Source Code</a>
                         </p>
                     </div>
@@ -162,7 +171,7 @@
                         <h4 class="card-title">aDoctor</h4>
                         <p class="card-text text-justify small">aDoctor is an IntellJ IDEA plugin to detect and refactor
                             five Android-specific code smells that impact the energy consumption of these applications.
-                            It is released under MIT license.</p>
+                            It is released under the MIT license.</p>
                         <p class="card-text"><a href="https://plugins.jetbrains.com/plugin/13443-adoctor"
                                 target="_blank">Plugin</a> - <a href="https://github.com/emaiannone/aDoctor"
                                 target="_blank">Source Code</a> - <a href="https://www.youtube.com/watch?v=1c2EhVXiKis"
