--- a/services.html
+++ b/services.html
@@ -150,7 +150,8 @@
                             IEEE/ACM International Conference on Mobile Software Engineering and Systems (MOBILESoft):<br />
                             &emsp;2019 (Student Research Competition)<br />
                             &emsp;2018 (Student Research Competition)<br />
-                            Workshop on Machine Learning Techniques for Software Quality Evaluation (MaLTeSQuE): 2020 2019 2018<br />
+                            International Workshop on Software Health (SoHeal): 2021<br />
+                            International Workshop on Machine Learning Techniques for Software Quality Evaluation (MaLTeSQuE): 2020 2019 2018<br />
                             International Workshop on Cloud-Native Applications Design and Experience (CNAX): 2019 2018<br />
                         </p>
                     </div>
