--- a/teaching.html
+++ b/teaching.html
@@ -106,7 +106,7 @@
                                 <tr>
                                     <td>Introduction to Machine Learning</td>
                                     <td>Pre-MSc</td>
-                                    <td>Jheronimus Academy of Data Science, Tilburg University, Technical University Eindhoven</td>
+                                    <td>Jheronimus Academy of Data Science (Tilburg University, Technical University Eindhoven)</td>
                                     <td>Spring 2021 (co-lectured with <a
                                             href="https://scholar.google.com/citations?user=l7BGAq8AAAAJ&hl=en"
                                             target="blank"> Prof. D.A. Tamburri</a>)<br/>Spring 2020 (co-lectured with <a
@@ -116,7 +116,7 @@
                                 <tr>
                                     <td>Data Engineerng</td>
                                     <td>MSc</td>
-                                    <td>Jheronimus Academy of Data Science, Tilburg University, Technical University Eindhoven</td>
+                                    <td>Jheronimus Academy of Data Science (Tilburg University, Technical University Eindhoven)</td>
                                     <td>Fall 2020 (co-lectured with <a
                                             href="https://scholar.google.com/citations?user=l7BGAq8AAAAJ&hl=en"
                                             target="blank"> Prof. D.A. Tamburri</a>, <a
