--- a/services.html
+++ b/services.html
@@ -119,6 +119,9 @@
                     <div class="card-body">
                         <h4 class="card-title">Editorial Board Member of International Journals</h4>
                         <p class="card-text text-justify small">
+                            Guest Editor for Science of Computer Programming (SCICO) for a <a
+                                href="https://www.journals.elsevier.com/science-of-computer-programming/call-for-papers/special-issue-on-software-health-of-software-ecosystems"
+                                target="blank">Special Issue on "Software Health of Software Ecosystems"</a>: 2020 - Actual<br />
                             IEEE Software - Initiatives Team: 2020 - Actual<br />
                             IEEE Software Blog: 2019 - Actual
                         </p>
@@ -129,10 +132,13 @@
                     <div class="card-body">
                         <h4 class="card-title">Program Committee Member of International Conferences and Workshops</h4>
                         <p class="card-text text-justify small">
-                            IEEE International Conference on Software Analysis, Evolution, and Reengineering (SANER):<br />
-                            &emsp;2021 (Research Track, Reproducibility Studies and Negative Results Track, Tool Demo Track)<br />
+                            IEEE International Conference on Software Analysis, Evolution, and Reengineering
+                            (SANER):<br />
+                            &emsp;2021 (Research Track, Reproducibility Studies and Negative Results Track, Tool Demo
+                            Track)<br />
                             &emsp;2020 (Research Track, Journal First Track, Tool Demo Track)<br />
-                            IEEE International Working Conference on Source Code Analysis and Manipulation (SCAM): <br />
+                            IEEE International Working Conference on Source Code Analysis and Manipulation (SCAM):
+                            <br />
                             &emsp;2020 (New Ideas and Emerging Results Track)<br />
                             ACM Joint European Software Engineering Conference and Symposium on the Foundations of
                             Software Engineering (ESEC/FSE):<br />
@@ -147,12 +153,15 @@
                             IEEE International Conference on Software Maintenance and Evolution (ICSME):<br />
                             &emsp;2019 (Tool Demo Track)<br />
                             &emsp;2018 (Tool Demo Track)<br />
-                            IEEE/ACM International Conference on Mobile Software Engineering and Systems (MOBILESoft):<br />
+                            IEEE/ACM International Conference on Mobile Software Engineering and Systems
+                            (MOBILESoft):<br />
                             &emsp;2019 (Student Research Competition)<br />
                             &emsp;2018 (Student Research Competition)<br />
                             International Workshop on Software Health (SoHeal): 2021<br />
-                            International Workshop on Machine Learning Techniques for Software Quality Evaluation (MaLTeSQuE): 2020 2019 2018<br />
-                            International Workshop on Cloud-Native Applications Design and Experience (CNAX): 2019 2018<br />
+                            International Workshop on Machine Learning Techniques for Software Quality Evaluation
+                            (MaLTeSQuE): 2020 2019 2018<br />
+                            International Workshop on Cloud-Native Applications Design and Experience (CNAX): 2019
+                            2018<br />
                         </p>
                     </div>
                 </div>
@@ -202,7 +211,8 @@
                         <h4 class="card-title">Invited Talks</h4>
                         <p class="card-text text-justify small">
                             Improving Energy Efficiency of Mobile Applications in the Internet of Things. International
-                            Summer School on Internet of Things, University of Salerno, Fisciano, Italy, June 3rd 2020<br />
+                            Summer School on Internet of Things, University of Salerno, Fisciano, Italy, June 3rd
+                            2020<br />
                             Defect Prediction: using Machine Learning for focusing the Testing Effort. University of
                             Salerno, Fisciano, Italy, March 25th 2020<br />
                             Mining Source Code^3: Mining Idioms, Usages and Edits. FOSDEM, Brussels, Belgium, February
