Update RADON description

--- a/projects.html
+++ b/projects.html
@@ -93,16 +93,7 @@
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
                         <h4 class="card-title">RADON H2020</h4>
-                        <p class="card-text text-justify small">The RADON project team will work on proposing a DevOps
-                            framework for creating and managing microservices-based applications that can optimally
-                            exploit serverless computing technologies. This framework will be “crash-tested” in the
-                            development of 3 different applications, which will include fine-grained and independently
-                            deployable microservices that can efficiently exploit FaaS and container technologies.
-
-                            The end goal is to broaden the adoption of serverless computing technologies within the
-                            European software industry. The methodology will strive to tackle complexity, harmonize the
-                            abstraction and actuation of action-trigger rules, avoid FaaS lock-in, and optimize
-                            decomposition and reuse through model-based FaaS-enabled development and orchestration.</p>
+                        <p class="card-text text-justify small">RADON offers an advanced DevOps framework to help the European software industry to adopt serverless FaaS technology, while avoiding lock-in within a specific FaaS provider. The RADON framework consists of an integrated methodology and an open source toolchain, to define, evolve, and operate event-centric applications that consume serverless functions, allowing a high-degree of reuse and automation of functions, services and associated data pipelines. </p>
                         <p class="card-text"><a href="http://radon-h2020.eu/" target="_blank">Web Site</a></p>
                     </div>
                 </div>
